--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -64,7 +64,7 @@ services:
 
   frontend:
     container_name: react-app
-    image: lauraokafor/computex:frontend3
+    image: lauraokafor/computex:frontend
     ports:
       - "5173:5173"
     depends_on:
